--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "altair>=5.5.0",
     "geopandas>=1.0.1",
     "polars>=1.27.1",
     "streamlit>=1.44.1",
